# rss_daily

./: .gitignore  Cargo.toml  INTRO.md  README.md  README_CN.md  config.toml
.github/workflows/: release.yml  rss.yml
data/: .gitkeep
data/github_trending/: .gitkeep  history.json
data/github_trending/2026/01-03/: 2026-01-03_trending.json
data/github_trending/2026/01-04/: 2026-01-04_trending.json
data/github_trending/2026/01-05/: 2026-01-05_trending.json
data/github_trending/2026/01-06/: 2026-01-06_trending.json
data/github_trending/2026/01-07/: 2026-01-07_trending.json
data/github_trending/2026/01-10/: 2026-01-10_trending.json
data/github_trending/2026/01-11/: 2026-01-11_trending.json
data/github_trending/2026/01-12/: 2026-01-12_trending.json
data/github_trending/2026/01-13/: 2026-01-13_trending.json
data/github_trending/2026/01-14/: 2026-01-14_trending.json
data/github_trending/2026/01-15/: 2026-01-15_trending.json
data/github_trending/2026/01-16/: 2026-01-16_trending.json
data/github_trending/2026/01-17/: 2026-01-17_trending.json
data/github_trending/2026/01-18/: 2026-01-18_trending.json
data/github_trending/2026/01-19/: 2026-01-19_trending.json
data/github_trending/2026/01-20/: 2026-01-20_trending.json
docs/rss/: .gitkeep  GITHUB_TODAY.md  GITHUB_TODAY_CN.md  daily-top.xml
docs/rss/2026/01-03/: README.md  (+4 more)
src/: config.rs  locales.rs  main.rs
src/github_trending/: fetcher.rs  image_gen.rs  readme_gen.rs  summary.rs
src/push_post/: medium.rs  mod.rs
src/storage/: data_storage.rs
templates/: card_template.html  preview.html
(+101 files in other folders)
