[package]
name = "rss-daily-cursor"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }

# RSS 生成
rss = "2.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 图片生成（HTML 转图片）
headless_chrome = "1.0"
tempfile = "3"

# 文本处理
regex = "1"

# 配置管理
config = "0.14"
dotenv = "0.15"
toml = "0.8"
urlencoding = "2.1"

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
env_logger = "0.11"
log = "0.4"

# Async trait support
async-trait = "0.1"

# AI API 客户端（可选，用于总结生成）
# openai = "0.1"  # 如果需要 OpenAI API

# QR Code 生成
qrcode = "0.12"
scraper = "0.22.0"
futures = "0.3.31"

[dev-dependencies]
mockito = "1"
